--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
     "start": "vite"
   },
   "devDependencies": {
+    "@tanstack/router-plugin": "^1.76.0",
+    "@types/node": "22.8.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@tanstack/router-plugin": "^1.76.0",
     "@vitejs/plugin-react": "^4.3.2",
     "vite": "^5.4.8"
   },
   "dependencies": {
+    "@emotion/react": "11.13.3",
+    "@emotion/styled": "11.13.0",
+    "@fontsource/roboto": "5.1.0",
+    "@mui/icons-material": "6.1.5",
+    "@mui/material": "6.1.5",
     "@tanstack/react-router": "^1.76.3",
     "@tanstack/router-devtools": "^1.76.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
