--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ dist/
 .vscode/*
 !.vscode/extensions.json
 .idea
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
