--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "vite"
   },
   "devDependencies": {
+    "@playwright/test": "1.48.2",
     "@tanstack/router-plugin": "^1.76.0",
     "@types/node": "22.8.1",
     "@types/react": "^18.3.3",
