--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite": "^5.4.8"
   },
   "dependencies": {
+    "@clerk/clerk-react": "5.13.1",
     "@emotion/react": "11.13.3",
     "@emotion/styled": "11.13.0",
     "@fontsource/roboto": "5.1.0",
