--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "type": "module",
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "dev": "vite --port=3001",
-    "build": "vite build",
+    "dev:client": "vite --port=3001",
+    "dev:server": "tsx watch src/server/index.ts",
+    "dev": "concurrently \"pnpm dev:client\" \"pnpm dev:server\"",
+    "build": "tsc && vite build",
     "serve": "vite preview",
-    "start": "vite"
+    "start:server": "node dist/server/index.js",
+    "start:client": "vite",
+    "start": "concurrently \"pnpm start:client\" \"pnpm start:server\""
   },
   "devDependencies": {
     "@playwright/test": "1.48.2",
@@ -17,6 +21,9 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "concurrently": "9.0.1",
+    "tsx": "4.19.2",
+    "typescript": "5.6.3",
     "vite": "^5.4.8"
   },
   "dependencies": {
@@ -26,10 +33,13 @@
     "@fontsource/roboto": "5.1.0",
     "@mui/icons-material": "6.1.5",
     "@mui/material": "6.1.5",
+    "@tanstack/react-query": "5.59.16",
     "@tanstack/react-router": "^1.76.3",
     "@tanstack/router-devtools": "^1.76.3",
+    "fastify": "5.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "3.23.8"
   },
   "prettier": {
     "semi": false,
