--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "concurrently": "9.0.1",
+    "drizzle-kit": "0.26.2",
     "tsx": "4.19.2",
     "typescript": "5.6.3",
     "vite": "^5.4.8"
@@ -33,9 +34,12 @@
     "@fontsource/roboto": "5.1.0",
     "@mui/icons-material": "6.1.5",
     "@mui/material": "6.1.5",
+    "@neondatabase/serverless": "0.10.1",
     "@tanstack/react-query": "5.59.16",
     "@tanstack/react-router": "^1.76.3",
     "@tanstack/router-devtools": "^1.76.3",
+    "dotenv": "16.4.5",
+    "drizzle-orm": "0.35.3",
     "fastify": "5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
